# claude-token-monitor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.sh  test-file.md
.github/workflows/: release.yml
monitor/: __init__.py  auth.py  combined.py  log_monitor.py  web_monitor.py
scripts/: start.bat  start.sh
src/claude_token_monitor/: __init__.py  __main__.py  main.py
src/claude_token_monitor/i18n/: __init__.py  en.py  zh.py
src/claude_token_monitor/monitor/: api_monitor.py  auth.py  combined.py  log_monitor.py  web_monitor.py
src/claude_token_monitor/platform/: auth.py  paths.py
src/claude_token_monitor/ui/: detail_window.py  theme.py  tray.py
ui/: __init__.py  floating_panel.py  menubar.py
